[gd_scene load_steps=40 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://tileset-walls.tres" type="TileSet" id=2]
[ext_resource path="res://tileset.tres" type="TileSet" id=3]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun3.png" type="Texture" id=4]
[ext_resource path="res://audio/digital_sfx/source/phaseJump1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/ENVIRONMENT/props-layer.png" type="Texture" id=6]
[ext_resource path="res://Assets/ENVIRONMENT/background.png" type="Texture" id=7]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun1.png" type="Texture" id=8]
[ext_resource path="res://characters/aliens/alien_pink.tscn" type="PackedScene" id=9]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun4.png" type="Texture" id=10]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun4.png" type="Texture" id=11]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun2.png" type="Texture" id=12]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun3.png" type="Texture" id=13]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun6.png" type="Texture" id=14]
[ext_resource path="res://marine/With Helm/Jump with Gun/sprites/jump-with-gun1.png" type="Texture" id=15]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun8.png" type="Texture" id=16]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun9.png" type="Texture" id=17]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun10.png" type="Texture" id=18]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun5.png" type="Texture" id=19]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun2.png" type="Texture" id=20]
[ext_resource path="res://marine/With Helm/Run with Gun/sprites/run-with-gun7.png" type="Texture" id=21]
[ext_resource path="res://marine/With Helm/Idle Gun/sprites/idle-gun1.png" type="Texture" id=22]
[ext_resource path="res://hook.tscn" type="PackedScene" id=23]
[ext_resource path="res://line.png" type="Texture" id=24]
[ext_resource path="res://Ancient_Game_Tribal_Drum_Hit_1.wav" type="AudioStream" id=25]
[ext_resource path="res://line3.png" type="Texture" id=26]
[ext_resource path="res://marine/With Helm/Crouch Gun/sprites/crouch-gun2.png" type="Texture" id=27]
[ext_resource path="res://marine/With Helm/Crouch Gun/sprites/crouch-gun1.png" type="Texture" id=28]
[ext_resource path="res://marine/With Helm/Crouch Gun/sprites/crouch-gun3.png" type="Texture" id=29]
[ext_resource path="res://Ancient_Game_Character_Male_Grunt.wav" type="AudioStream" id=30]
[ext_resource path="res://line2.png" type="Texture" id=31]
[ext_resource path="res://line4.png" type="Texture" id=32]

[sub_resource type="AnimatedTexture" id=7]
flags = 2
frames = 4
fps = 12.0
frame_0/texture = ExtResource( 24 )
frame_1/texture = ExtResource( 31 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 26 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 32 )
frame_3/delay_sec = 0.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 15 )

[sub_resource type="AudioStreamRandomPitch" id=2]
audio_stream = ExtResource( 5 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.776471, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( -3, 10, 0 )
spread = 30.0
gravity = Vector3( 0, 100, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.16
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 20 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "crouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 14 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 30.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "getup",
"speed": 5.0
} ]

[node name="main" type="Node2D"]

[node name="TileMapWalls" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196461, 2, 0, -130920, 4, 0, 8, 2, 0, 12, 2, 0, 94, 4, 0, 152, 4, 0, 193, 3, 0, 65544, 2, 0, 65548, 2, 0, 65683, 2, 0, 131080, 2, 0, 131084, 2, 0, 131166, 4, 0, 131224, 4, 0, 131265, 3, 0, 196616, 2, 0, 196620, 2, 0, 262238, 4, 0, 262296, 4, 0, 262337, 3, 0, 327827, 2, 0, 393310, 4, 0, 393368, 4, 0, 393409, 3, 0, 524284, 1, 0, 458764, 1, 0, 458813, 0, 0, 524382, 4, 0, 524440, 4, 0, 524481, 3, 0, 589971, 2, 0, 589988, 1, 0, 590040, 1, 0, 655454, 4, 0, 655512, 4, 0, 655553, 3, 0, 786526, 4, 0, 786584, 4, 0, 786625, 3, 0, 852115, 2, 0, 917598, 4, 0, 917656, 4, 0, 917697, 3, 0, 1048769, 3, 0 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( -130854, 11, 0, -130853, 11, 0, -65459, 6, 0, -65324, 11, 0, -65323, 11, 0, -65322, 11, 0, -65321, 11, 0, -65320, 11, 0, -65319, 11, 0, -65318, 11, 0, -65317, 11, 0, -65316, 11, 0, -65315, 11, 0, -65314, 11, 0, -65313, 11, 0, -65312, 11, 0, -65311, 11, 0, -65310, 11, 0, -65309, 11, 0, -65308, 11, 0, -65307, 11, 0, -65306, 11, 0, -65305, 11, 0, 0, 11, 0, 1, 11, 0, 2, 11, 0, 3, 11, 0, 4, 11, 0, 5, 11, 0, 6, 11, 0, 7, 11, 0, 8, 11, 0, 9, 11, 0, 10, 11, 0, 11, 11, 0, 12, 11, 0, 13, 11, 0, 14, 11, 0, 15, 11, 0, 16, 11, 0, 17, 11, 0, 18, 11, 0, 19, 11, 0, 20, 11, 0, 21, 11, 0, 22, 11, 0, 23, 11, 0, 24, 11, 0, 25, 11, 0, 26, 11, 0, 27, 11, 0, 28, 6, 0, 57, 11, 0, 58, 11, 0, 59, 11, 0, 60, 11, 0, 61, 11, 0, 62, 11, 0, 63, 11, 0, 64, 11, 0, 65, 11, 0, 66, 11, 0, 67, 11, 0, 68, 11, 0, 69, 11, 0, 70, 11, 0, 71, 11, 0, 72, 11, 0, 73, 11, 0, 74, 11, 0, 75, 11, 0, 76, 11, 0, 77, 6, 0, 113, 11, 0, 114, 11, 0, 115, 11, 0, 116, 11, 0, 117, 11, 0, 118, 11, 0, 119, 11, 0, 120, 11, 0, 121, 11, 0, 122, 11, 0, 123, 11, 0, 124, 11, 0, 125, 6, 0, 163, 11, 0, 164, 11, 0, 165, 11, 0, 166, 11, 0, 167, 11, 0, 168, 11, 0, 169, 11, 0, 170, 11, 0, 171, 11, 0, 172, 11, 0, 173, 11, 0, 174, 11, 0, 175, 11, 0, 176, 11, 0, 177, 11, 0, 178, 11, 0, 179, 6, 0, 212, 11, 0, 213, 11, 0, 214, 11, 0, 215, 11, 0, 216, 11, 0, 217, 11, 0, 218, 11, 0, 219, 11, 0, 220, 11, 0, 221, 11, 0, 222, 11, 0, 223, 11, 0, 224, 11, 0, 225, 11, 0, 226, 11, 0, 227, 11, 0, 228, 11, 0, 229, 11, 0, 230, 11, 0, 231, 11, 0, 65536, 11, 0, 65537, 11, 0, 65538, 11, 0, 65539, 11, 0, 65540, 11, 0, 65541, 11, 0, 65542, 11, 0, 65543, 11, 0, 65544, 11, 0, 65545, 11, 0, 65546, 11, 0, 65547, 11, 0, 65548, 11, 0, 65549, 11, 0, 65550, 11, 0, 65551, 11, 0, 65552, 11, 0, 65553, 11, 0, 65554, 11, 0, 65555, 11, 0, 65556, 11, 0, 65557, 11, 0, 65558, 11, 0, 65559, 11, 0, 65560, 11, 0, 65561, 11, 0, 65562, 11, 0, 65563, 11, 0, 65564, 6, 0, 65593, 11, 0, 65594, 11, 0, 65595, 11, 0, 65596, 11, 0, 65597, 11, 0, 65598, 11, 0, 65599, 11, 0, 65600, 11, 0, 65601, 11, 0, 65602, 11, 0, 65603, 11, 0, 65604, 11, 0, 65605, 11, 0, 65606, 11, 0, 65607, 11, 0, 65608, 11, 0, 65609, 11, 0, 65610, 11, 0, 65611, 11, 0, 65612, 11, 0, 65613, 6, 0, 65649, 11, 0, 65650, 11, 0, 65651, 11, 0, 65652, 11, 0, 65653, 11, 0, 65654, 11, 0, 65655, 11, 0, 65656, 11, 0, 65657, 11, 0, 65658, 11, 0, 65659, 11, 0, 65660, 11, 0, 65661, 6, 0, 65699, 11, 0, 65700, 11, 0, 65701, 11, 0, 65702, 11, 0, 65703, 11, 0, 65704, 11, 0, 65705, 11, 0, 65706, 11, 0, 65707, 11, 0, 65708, 11, 0, 65709, 11, 0, 65710, 11, 0, 65711, 11, 0, 65712, 11, 0, 65713, 11, 0, 65714, 11, 0, 65715, 6, 0, 65748, 11, 0, 65749, 11, 0, 65750, 11, 0, 65751, 11, 0, 65752, 11, 0, 65753, 11, 0, 65754, 11, 0, 65755, 11, 0, 65756, 11, 0, 65757, 11, 0, 65758, 11, 0, 65759, 11, 0, 65760, 11, 0, 65761, 11, 0, 65762, 11, 0, 65763, 11, 0, 65764, 11, 0, 65765, 11, 0, 65766, 11, 0, 65767, 11, 0, 131072, 11, 0, 131073, 11, 0, 131074, 11, 0, 131075, 11, 0, 131076, 11, 0, 131077, 11, 0, 131078, 11, 0, 131079, 11, 0, 131080, 11, 0, 131081, 11, 0, 131082, 11, 0, 131083, 11, 0, 131084, 11, 0, 131085, 11, 0, 131086, 11, 0, 131087, 11, 0, 131088, 11, 0, 131089, 11, 0, 131090, 11, 0, 131091, 11, 0, 131092, 11, 0, 131093, 11, 0, 131094, 11, 0, 131095, 11, 0, 131096, 11, 0, 131097, 11, 0, 131098, 11, 0, 131099, 11, 0, 131100, 6, 0, 131129, 11, 0, 131130, 11, 0, 131131, 11, 0, 131132, 11, 0, 131133, 11, 0, 131134, 11, 0, 131135, 11, 0, 131136, 11, 0, 131137, 11, 0, 131138, 11, 0, 131139, 11, 0, 131140, 11, 0, 131141, 11, 0, 131142, 11, 0, 131143, 11, 0, 131144, 11, 0, 131145, 11, 0, 131146, 11, 0, 131147, 11, 0, 131148, 11, 0, 131149, 6, 0, 131185, 11, 0, 131186, 11, 0, 131187, 11, 0, 131188, 11, 0, 131189, 11, 0, 131190, 11, 0, 131191, 11, 0, 131192, 11, 0, 131193, 11, 0, 131194, 11, 0, 131195, 11, 0, 131196, 11, 0, 131197, 6, 0, 131235, 11, 0, 131236, 11, 0, 131237, 11, 0, 131238, 11, 0, 131239, 11, 0, 131240, 11, 0, 131241, 11, 0, 131242, 11, 0, 131243, 11, 0, 131244, 11, 0, 131245, 11, 0, 131246, 11, 0, 131247, 11, 0, 131248, 11, 0, 131249, 11, 0, 131250, 11, 0, 131251, 6, 0, 131284, 11, 0, 131285, 11, 0, 131286, 11, 0, 131287, 11, 0, 131288, 11, 0, 131289, 11, 0, 131290, 11, 0, 131291, 11, 0, 131292, 11, 0, 131293, 11, 0, 131294, 11, 0, 131295, 11, 0, 131296, 11, 0, 131297, 11, 0, 131298, 11, 0, 131299, 11, 0, 131300, 11, 0, 131301, 11, 0, 131302, 11, 0, 131303, 11, 0, 196608, 11, 0, 196609, 11, 0, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 11, 0, 196617, 11, 0, 196618, 11, 0, 196619, 11, 0, 196620, 11, 0, 196621, 11, 0, 196622, 11, 0, 196623, 11, 0, 196624, 11, 0, 196625, 11, 0, 196626, 11, 0, 196627, 11, 0, 196628, 11, 0, 196629, 11, 0, 196630, 11, 0, 196631, 11, 0, 196632, 11, 0, 196633, 11, 0, 196634, 11, 0, 196635, 11, 0, 196636, 6, 0, 196669, 11, 0, 196670, 11, 0, 196671, 11, 0, 196672, 11, 0, 196673, 11, 0, 196674, 11, 0, 196675, 11, 0, 196676, 11, 0, 196677, 11, 0, 196678, 11, 0, 196679, 11, 0, 196680, 11, 0, 196681, 11, 0, 196682, 11, 0, 196683, 11, 0, 196684, 11, 0, 196685, 6, 0, 196721, 11, 0, 196722, 11, 0, 196723, 11, 0, 196724, 11, 0, 196725, 11, 0, 196726, 11, 0, 196727, 11, 0, 196728, 11, 0, 196729, 11, 0, 196730, 11, 0, 196731, 11, 0, 196732, 11, 0, 196733, 6, 0, 196771, 11, 0, 196772, 11, 0, 196773, 11, 0, 196774, 11, 0, 196775, 11, 0, 196776, 11, 0, 196777, 11, 0, 196778, 11, 0, 196779, 11, 0, 196780, 11, 0, 196781, 11, 0, 196782, 11, 0, 196783, 11, 0, 196784, 11, 0, 196785, 11, 0, 196786, 11, 0, 196787, 6, 0, 196820, 11, 0, 196821, 11, 0, 196822, 11, 0, 196823, 11, 0, 196824, 11, 0, 196825, 11, 0, 196826, 11, 0, 196827, 11, 0, 196828, 11, 0, 196829, 11, 0, 196830, 11, 0, 196831, 11, 0, 196832, 11, 0, 196833, 11, 0, 196834, 11, 0, 196835, 11, 0, 196836, 11, 0, 196837, 11, 0, 196838, 11, 0, 196839, 11, 0, 262144, 11, 0, 262145, 11, 0, 262146, 11, 0, 262147, 11, 0, 262148, 11, 0, 262149, 11, 0, 262150, 11, 0, 262151, 11, 0, 262152, 11, 0, 262153, 11, 0, 262154, 11, 0, 262155, 11, 0, 262156, 11, 0, 262157, 11, 0, 262158, 11, 0, 262159, 11, 0, 262160, 11, 0, 262161, 11, 0, 262162, 11, 0, 262163, 11, 0, 262164, 11, 0, 262165, 11, 0, 262166, 11, 0, 262167, 11, 0, 262168, 11, 0, 262169, 11, 0, 262170, 11, 0, 262171, 11, 0, 262172, 6, 0, 262205, 5, 0, 262209, 5, 0, 262213, 5, 0, 262217, 5, 0, 262221, 6, 0, 262257, 11, 0, 262258, 11, 0, 262259, 11, 0, 262260, 11, 0, 262261, 11, 0, 262262, 11, 0, 262263, 11, 0, 262264, 11, 0, 262265, 11, 0, 262266, 11, 0, 262267, 11, 0, 262268, 11, 0, 262269, 6, 0, 262307, 11, 0, 262308, 11, 0, 262309, 11, 0, 262310, 11, 0, 262311, 11, 0, 262312, 11, 0, 262313, 11, 0, 262314, 11, 0, 262315, 11, 0, 262316, 11, 0, 262317, 11, 0, 262318, 11, 0, 262319, 11, 0, 262320, 11, 0, 262321, 11, 0, 262322, 11, 0, 262323, 6, 0, 262356, 11, 0, 262357, 11, 0, 262358, 11, 0, 262359, 11, 0, 262360, 11, 0, 262361, 11, 0, 262362, 11, 0, 262363, 11, 0, 262364, 11, 0, 262365, 11, 0, 262366, 11, 0, 262367, 11, 0, 262368, 11, 0, 262369, 11, 0, 262370, 11, 0, 262371, 11, 0, 262372, 11, 0, 262373, 11, 0, 262374, 11, 0, 262375, 11, 0, 327680, 5, 0, 327684, 5, 0, 327688, 12, 0, 327692, 5, 0, 327696, 5, 0, 327700, 5, 0, 327704, 5, 0, 327708, 6, 0, 327757, 6, 0, 327793, 12, 0, 327797, 12, 0, 327801, 12, 0, 327805, 6, 0, 327843, 11, 0, 327844, 11, 0, 327845, 11, 0, 327846, 11, 0, 327847, 11, 0, 327848, 11, 0, 327849, 11, 0, 327850, 11, 0, 327851, 11, 0, 327852, 11, 0, 327853, 11, 0, 327854, 11, 0, 327855, 11, 0, 327856, 11, 0, 327857, 11, 0, 327858, 11, 0, 327859, 6, 0, 327892, 11, 0, 327893, 11, 0, 327894, 11, 0, 327895, 11, 0, 327896, 11, 0, 327897, 11, 0, 327898, 11, 0, 327899, 11, 0, 327900, 11, 0, 327901, 11, 0, 327902, 11, 0, 327903, 11, 0, 327904, 11, 0, 327905, 11, 0, 327906, 11, 0, 327907, 11, 0, 327908, 11, 0, 327909, 11, 0, 327910, 11, 0, 327911, 11, 0, 393244, 6, 0, 393258, 7, 0, 393293, 10, 0, 393341, 6, 0, 393379, 11, 0, 393380, 11, 0, 393381, 11, 0, 393382, 11, 0, 393383, 11, 0, 393384, 11, 0, 393385, 11, 0, 393386, 11, 0, 393387, 11, 0, 393388, 11, 0, 393389, 11, 0, 393390, 11, 0, 393391, 11, 0, 393392, 11, 0, 393393, 11, 0, 393394, 11, 0, 393395, 6, 0, 393428, 11, 0, 393429, 11, 0, 393430, 11, 0, 393431, 11, 0, 393432, 11, 0, 393433, 11, 0, 393434, 11, 0, 393435, 11, 0, 393436, 11, 0, 393437, 11, 0, 393438, 11, 0, 393439, 11, 0, 393440, 11, 0, 393441, 11, 0, 393442, 11, 0, 393443, 11, 0, 393444, 11, 0, 393445, 11, 0, 393446, 11, 0, 393447, 11, 0, 458752, 7, 0, 458780, 10, 0, 458877, 10, 0, 458915, 12, 0, 458919, 12, 0, 458923, 12, 0, 458927, 5, 0, 458931, 6, 0, 458964, 5, 0, 458968, 5, 0, 458972, 5, 0, 458976, 5, 0, 458980, 5, 0, 589823, 11, 0, 524467, 6, 0, 655359, 11, 0, 590003, 10, 0, 720895, 11, 0, 786431, 11, 0, 720908, 9, 0, 720933, 9, 0, 720937, 8, 0, 720941, 8, 0, 720945, 9, 0, 720994, 9, 0, 851967, 11, 0, 786518, 8, 0, 786522, 8, 0, 786526, 8, 0, 786570, 9, 0, 917503, 11, 0, 983039, 11, 0, 917504, 3, 0, 917508, 1, 0, 917512, 3, 0, 917521, 4, 0, 917525, 1, 0, 917529, 3, 0, 917533, 3, 0, 917537, 2, 0, 917558, 2, 0, 917562, 2, 0, 917566, 2, 0, 917570, 3, 0, 917574, 4, 0, 917578, 4, 0, 917582, 4, 0, 917586, 3, 0, 917607, 3, 0, 917611, 3, 0, 917614, 3, 0, 917618, 1, 0, 917622, 1, 0, 917626, 3, 0, 917630, 2, 0, 917634, 2, 0, 917638, 3, 0, 917667, 8, 0, 917671, 8, 0, 917675, 8, 0, 917679, 9, 0, 917716, 8, 0, 917720, 8, 0, 917724, 8, 0, 917728, 8, 0, 917732, 8, 0, 983183, 3, 0, 983187, 3, 0, 983191, 3, 0, 983195, 2, 0, 983199, 2, 0, 1114213, 11, 0, 1114292, 3, 0, 1114296, 3, 0, 1114300, 3, 0, 1114304, 3, 0, 1114308, 3, 0, 1114312, 3, 0, 1114316, 3, 0, 1114320, 2, 0, 1179648, 11, 0, 1179649, 11, 0, 1179650, 11, 0, 1179651, 11, 0, 1179652, 11, 0, 1179653, 11, 0, 1179654, 11, 0, 1179655, 11, 0, 1179656, 11, 0, 1179657, 11, 0, 1179658, 11, 0, 1179659, 11, 0, 1179660, 11, 0, 1179661, 11, 0, 1179662, 11, 0, 1179663, 11, 0, 1179664, 11, 0, 1179665, 11, 0, 1179666, 11, 0, 1179667, 11, 0, 1179668, 11, 0, 1179669, 11, 0, 1179670, 11, 0, 1179671, 11, 0, 1179672, 11, 0, 1179673, 11, 0, 1179674, 11, 0, 1179675, 11, 0, 1179676, 11, 0, 1179677, 11, 0, 1179678, 11, 0, 1179679, 11, 0, 1179680, 11, 0, 1179681, 11, 0, 1179682, 11, 0, 1179683, 11, 0, 1179684, 11, 0, 1179685, 11, 0, 1179686, 11, 0, 1179687, 11, 0, 1179688, 11, 0, 1179689, 11, 0, 1179690, 11, 0, 1179691, 11, 0, 1179692, 11, 0, 1179693, 11, 0, 1179694, 11, 0, 1179695, 11, 0, 1179696, 11, 0, 1179697, 11, 0, 1179698, 11, 0, 1179699, 11, 0, 1179700, 11, 0, 1179701, 11, 0, 1179702, 11, 0, 1179703, 11, 0, 1179704, 11, 0, 1179705, 11, 0, 1179706, 11, 0, 1179707, 11, 0, 1179708, 11, 0, 1179709, 11, 0, 1179710, 11, 0, 1179711, 11, 0, 1179712, 11, 0, 1179713, 11, 0, 1179714, 11, 0, 1179715, 11, 0, 1179716, 11, 0, 1179717, 11, 0, 1179718, 11, 0, 1179719, 11, 0, 1179720, 11, 0, 1179721, 11, 0, 1179722, 11, 0, 1179723, 11, 0, 1179724, 11, 0, 1179725, 11, 0, 1179726, 11, 0, 1179727, 11, 0, 1179728, 11, 0, 1179729, 11, 0, 1179730, 11, 0, 1179731, 11, 0, 1179732, 11, 0, 1179733, 11, 0, 1179746, 11, 0, 1179747, 11, 0, 1179748, 11, 0, 1179749, 11, 0, 1179750, 11, 0, 1179751, 11, 0, 1179752, 11, 0, 1179753, 11, 0, 1179754, 11, 0, 1179755, 11, 0, 1179756, 11, 0, 1179757, 11, 0, 1179758, 11, 0, 1179759, 11, 0, 1179760, 11, 0, 1179761, 11, 0, 1179762, 11, 0, 1179763, 11, 0, 1179764, 11, 0, 1179765, 11, 0, 1179766, 11, 0, 1179767, 11, 0, 1179768, 11, 0, 1179769, 11, 0, 1179770, 11, 0, 1179771, 11, 0, 1179772, 11, 0, 1179773, 11, 0, 1179774, 11, 0, 1179775, 11, 0, 1179776, 11, 0, 1179777, 11, 0, 1179778, 11, 0, 1179779, 11, 0, 1179780, 11, 0, 1179781, 11, 0, 1179782, 11, 0, 1179783, 11, 0, 1179784, 11, 0, 1179785, 11, 0, 1245184, 11, 0, 1245185, 11, 0, 1245186, 11, 0, 1245187, 11, 0, 1245188, 11, 0, 1245189, 11, 0, 1245190, 11, 0, 1245191, 11, 0, 1245192, 11, 0, 1245193, 11, 0, 1245194, 11, 0, 1245195, 11, 0, 1245196, 11, 0, 1245197, 11, 0, 1245198, 11, 0, 1245199, 11, 0, 1245200, 11, 0, 1245201, 11, 0, 1245202, 11, 0, 1245203, 11, 0, 1245204, 11, 0, 1245205, 11, 0, 1245206, 11, 0, 1245207, 11, 0, 1245208, 11, 0, 1245209, 11, 0, 1245210, 11, 0, 1245211, 11, 0, 1245212, 11, 0, 1245213, 11, 0, 1245214, 11, 0, 1245215, 11, 0, 1245216, 11, 0, 1245217, 11, 0, 1245218, 11, 0, 1245219, 11, 0, 1245220, 11, 0, 1245221, 11, 0, 1245222, 11, 0, 1245223, 11, 0, 1245224, 11, 0, 1245225, 11, 0, 1245226, 11, 0, 1245227, 11, 0, 1245228, 11, 0, 1245229, 11, 0, 1245230, 11, 0, 1245231, 11, 0, 1245232, 11, 0, 1245233, 11, 0, 1245234, 11, 0, 1245235, 11, 0, 1245236, 11, 0, 1245237, 11, 0, 1245238, 11, 0, 1245239, 11, 0, 1245240, 11, 0, 1245241, 11, 0, 1245242, 11, 0, 1245243, 11, 0, 1245244, 11, 0, 1245245, 11, 0, 1245246, 11, 0, 1245247, 11, 0, 1245248, 11, 0, 1245249, 11, 0, 1245250, 11, 0, 1245251, 11, 0, 1245252, 11, 0, 1245253, 11, 0, 1245254, 11, 0, 1245255, 11, 0, 1245256, 11, 0, 1245257, 11, 0, 1245258, 11, 0, 1245259, 11, 0, 1245260, 11, 0, 1245261, 11, 0, 1245262, 11, 0, 1245263, 11, 0, 1245264, 11, 0, 1245265, 11, 0, 1245266, 11, 0, 1245267, 11, 0, 1245268, 11, 0, 1245269, 11, 0, 1245270, 11, 0, 1245271, 11, 0, 1245272, 11, 0, 1245273, 11, 0, 1245274, 11, 0, 1245275, 11, 0, 1245276, 11, 0, 1245277, 11, 0, 1245278, 11, 0, 1245279, 11, 0, 1245280, 11, 0, 1245281, 11, 0, 1245282, 11, 0, 1245283, 11, 0, 1245284, 11, 0, 1245285, 11, 0, 1245286, 11, 0, 1245287, 11, 0, 1245288, 11, 0, 1245289, 11, 0, 1245290, 11, 0, 1245291, 11, 0, 1245292, 11, 0, 1245293, 11, 0, 1245294, 11, 0, 1245295, 11, 0, 1245296, 11, 0, 1245297, 11, 0, 1245298, 11, 0, 1245299, 11, 0, 1245300, 11, 0, 1245301, 11, 0, 1245302, 11, 0, 1245303, 11, 0, 1245304, 11, 0, 1245305, 11, 0, 1245306, 11, 0, 1245307, 11, 0, 1245308, 11, 0, 1245309, 11, 0, 1245310, 11, 0, 1245311, 11, 0, 1245312, 11, 0, 1245313, 11, 0, 1245314, 11, 0, 1245315, 11, 0, 1245316, 11, 0, 1245317, 11, 0, 1245318, 11, 0, 1245319, 11, 0, 1245320, 11, 0, 1245321, 11, 0, 1245322, 11, 0, 1245323, 11, 0, 1245324, 11, 0, 1245325, 11, 0, 1245326, 11, 0, 1245327, 11, 0, 1245328, 11, 0, 1245329, 11, 0, 1245330, 11, 0, 1245331, 11, 0, 1245332, 11, 0, 1245333, 11, 0, 1245334, 11, 0, 1245335, 11, 0, 1245336, 11, 0, 1245337, 11, 0, 1245338, 11, 0, 1245339, 11, 0, 1245340, 11, 0, 1245341, 11, 0, 1245342, 11, 0, 1245343, 11, 0, 1245344, 11, 0, 1245345, 11, 0, 1245346, 11, 0, 1310720, 11, 0, 1310721, 11, 0, 1310722, 11, 0, 1310723, 11, 0, 1310724, 11, 0, 1310725, 11, 0, 1310726, 11, 0, 1310727, 11, 0, 1310728, 11, 0, 1310729, 11, 0, 1310730, 11, 0, 1310731, 11, 0, 1310732, 11, 0, 1310733, 11, 0, 1310734, 11, 0, 1310735, 11, 0, 1310736, 11, 0, 1310737, 11, 0, 1310738, 11, 0, 1310739, 11, 0, 1310740, 11, 0, 1310741, 11, 0, 1310742, 11, 0, 1310743, 11, 0, 1310744, 11, 0, 1310745, 11, 0, 1310746, 11, 0, 1310747, 11, 0, 1310748, 11, 0, 1310749, 11, 0, 1310750, 11, 0, 1310751, 11, 0, 1310752, 11, 0, 1310753, 11, 0, 1310754, 11, 0, 1310755, 11, 0, 1310756, 11, 0, 1310757, 11, 0, 1310758, 11, 0, 1310759, 11, 0, 1310760, 11, 0, 1310761, 11, 0, 1310762, 11, 0, 1310763, 11, 0, 1310764, 11, 0, 1310765, 11, 0, 1310766, 11, 0, 1310767, 11, 0, 1310768, 11, 0, 1310769, 11, 0, 1310770, 11, 0, 1310771, 11, 0, 1310772, 11, 0, 1310773, 11, 0, 1310774, 11, 0, 1310775, 11, 0, 1310776, 11, 0, 1310777, 11, 0, 1310778, 11, 0, 1310779, 11, 0, 1310780, 11, 0, 1310781, 11, 0, 1310782, 11, 0, 1310783, 11, 0, 1310784, 11, 0, 1310785, 11, 0, 1310786, 11, 0, 1310787, 11, 0, 1310788, 11, 0, 1310789, 11, 0, 1310790, 11, 0, 1310791, 11, 0, 1310792, 11, 0, 1310793, 11, 0, 1310794, 11, 0, 1310795, 11, 0, 1310796, 11, 0, 1310797, 11, 0, 1310798, 11, 0, 1310799, 11, 0, 1310800, 11, 0, 1310801, 11, 0, 1310802, 11, 0, 1310803, 11, 0, 1310804, 11, 0, 1310805, 11, 0, 1310806, 11, 0, 1310807, 11, 0, 1310808, 11, 0, 1310809, 11, 0, 1310810, 11, 0, 1310811, 11, 0, 1310812, 11, 0, 1310813, 11, 0, 1310814, 11, 0, 1310815, 11, 0, 1310816, 11, 0, 1310817, 11, 0, 1310818, 11, 0, 1310819, 11, 0, 1310820, 11, 0, 1310821, 11, 0, 1310822, 11, 0, 1310823, 11, 0, 1310824, 11, 0, 1310825, 11, 0, 1310826, 11, 0, 1310827, 11, 0, 1310828, 11, 0, 1310829, 11, 0, 1310830, 11, 0, 1310831, 11, 0, 1310832, 11, 0, 1310833, 11, 0, 1310834, 11, 0, 1310835, 11, 0, 1310836, 11, 0, 1310837, 11, 0, 1310838, 11, 0, 1310839, 11, 0, 1310840, 11, 0, 1310841, 11, 0, 1310842, 11, 0, 1310843, 11, 0, 1310844, 11, 0, 1310845, 11, 0, 1310846, 11, 0, 1310847, 11, 0, 1310848, 11, 0, 1310849, 11, 0, 1310850, 11, 0, 1310851, 11, 0, 1310852, 11, 0, 1310853, 11, 0, 1310854, 11, 0, 1310855, 11, 0, 1310856, 11, 0, 1310857, 11, 0, 1310858, 11, 0, 1310859, 11, 0, 1310860, 11, 0, 1310861, 11, 0, 1310862, 11, 0, 1310863, 11, 0, 1310864, 11, 0, 1310865, 11, 0, 1310866, 11, 0, 1310867, 11, 0, 1310868, 11, 0, 1310869, 11, 0, 1310870, 11, 0, 1310871, 11, 0, 1310872, 11, 0, 1310873, 11, 0, 1310874, 11, 0, 1310875, 11, 0, 1310876, 11, 0, 1310877, 11, 0, 1310878, 11, 0, 1310879, 11, 0, 1310880, 11, 0, 1310881, 11, 0, 1310882, 11, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="bacground layer" type="ParallaxLayer" parent="ParallaxBackground"]
z_as_relative = false
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -60 )
motion_mirroring = Vector2( 1068, 250 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/bacground layer"]
texture = ExtResource( 7 )
centered = false

[node name="props" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 400
motion_scale = Vector2( 0.8, 1 )
motion_offset = Vector2( 0, 50 )
motion_mirroring = Vector2( 1068, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/props"]
texture = ExtResource( 6 )
centered = false

[node name="hook_line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 1, 1, 1, 1 )
texture = SubResource( 7 )
texture_mode = 1
antialiased = true

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 694, 143 )
collision_mask = 31
script = ExtResource( 1 )

[node name="alien_pink" parent="player" instance=ExtResource( 9 )]
visible = false
frame = 1
playing = true

[node name="collision_shape_2d" type="CollisionShape2D" parent="player"]
position = Vector2( -0.158997, -13.7108 )
shape = SubResource( 1 )

[node name="camera_2d" type="Camera2D" parent="player"]
current = true
limit_left = 0
limit_top = -300
limit_bottom = 500

[node name="phaseJump1" type="AudioStreamPlayer" parent="player"]
stream = SubResource( 2 )

[node name="particles_2d" type="Particles2D" parent="player"]
position = Vector2( -10, -21 )
amount = 200
local_coords = false
process_material = SubResource( 4 )

[node name="marine" type="AnimatedSprite" parent="player"]
position = Vector2( 0, -22.711 )
frames = SubResource( 3 )
animation = "getup"
frame = 2
playing = true

[node name="footstep" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 25 )

[node name="footstep2" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 25 )
pitch_scale = 1.33

[node name="land" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 25 )
pitch_scale = 0.8

[node name="hup" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 30 )
pitch_scale = 0.7

[node name="hook" parent="." instance=ExtResource( 23 )]
position = Vector2( 693, 88 )

[connection signal="animation_finished" from="player/marine" to="player" method="_on_marine_animation_finished"]
[connection signal="frame_changed" from="player/marine" to="player" method="_on_marine_frame_changed"]
